--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test": "grunt test"
   },
   "dependencies": {
+    "connect": "^3.4.0",
     "imp-io": "^0.2.1",
     "j5-songs": "0.0.6",
     "johnny-five": "^0.8.58",
