updating for the new robot code

--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "javascript-robotics-not-a-bad-idea",
   "version": "0.0.0",
   "dependencies": {
-    "reveal.js": "~2.6.1",
-    "reveal-highlight-themes": "~8.3.0"
+    "reveal-highlight-themes": "~8.3.0",
+    "reveal.js": "~2.6.1"
   }
 }
