--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-watch": "^0.6.1",
+    "jshint": "^2.9.4",
     "load-grunt-tasks": "^1.0.0"
   },
   "engines": {
